tests/core/snapshots/test-js-request-response-2.md_merged.snap
---
source: tests/core/spec.rs
expression: merged
---
schema @link(src: "test.js", type: Script) {
  query: Query
}

type Query {
  hello: String @http(baseURL: "http://localhost:3000", path: "/hello")
  hi: String @http(baseURL: "http://localhost:3000", path: "/hi")
}
