tests/core/snapshots/test-js-request-response.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "hello": "hello world",
      "hi": "bye world"
    }
  }
}
