tests/core/snapshots/test-js-request-response.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar Email

scalar Empty

scalar Int64

scalar Int64Str

scalar JSON

scalar PhoneNumber

type Query {
  hello: String
  hi: String
}

scalar UInt32

scalar UInt64

scalar UInt64Str

scalar Url

schema {
  query: Query
}
