tests/core/snapshots/test-js-request-response.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server
  @upstream(onRequest: "onRequest")
  @link(src: "config.yml", type: Config)
  @link(src: "test.js", type: Script) {
  query: Query
}

type Query {
  hello: String @http(url: "http://localhost:3000/hello")
  hi: String @http(url: "http://localhost:3000/hi")
}
