tests/core/snapshots/test-lack-resolver.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "No resolver has been found in the schema",
    "trace": [
      "Query",
      "posts"
    ],
    "description": null
  }
]
