tests/core/snapshots/test-list-args.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "f1": {
        "numbers": [
          1,
          2,
          3
        ]
      }
    }
  }
}
