tests/core/snapshots/test-list-args.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  f1(q: [Int!]!): T1
}

type T1 {
  numbers: [Int]
}

schema {
  query: Query
}
