tests/core/snapshots/test-list-argument.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  f1(q: [Int!]!): T1
}

type T1 {
  numbers: [Int]
}

scalar Url

schema {
  query: Query
}
