tests/core/snapshots/test-merge-batch.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream(batch: {delay: 0, headers: ["a", "b"], maxSize: 1000}) {
  query: Query
}

type Query {
  hello: String @expr(body: "world")
}
