tests/core/snapshots/test-merge-input.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
snapshot_kind: text
---
type Query {
  foo(x: Test): Boolean
}

input Test {
  b: String
}

schema {
  query: Query
}
